Blender debug builds triggers asserts when copying pose bone. #75036

Closed
opened 2020-03-23 17:50:05 +01:00 by Sebastian Parborg · 3 comments

System Information
Operating system: Gentoo Linux
Graphics card: AMD 5700xt

Blender Version
Broken: 4102d67d32
(Has to be a debug build to trigger the asserts)

Short description of error
When opening a saved .blend files with bones in it, an assert will fire off when you try to copy a pose bone.

Exact steps for others to reproduce the error
untitled.blend

  1. Open attached .blend file
  2. Go into pose mode.
  3. Copy the only pose bone (ctrl+c)
  4. The following assert is triggered:
blenderdebug(BLI_system_backtrace+0x35) [0x56332f294818]
blenderdebug(BKE_bpath_relative_rebase+0x73) [0x56332679f1ce]
blenderdebug(BLO_write_file+0x2cc) [0x563326981aa4]
blenderdebug(BKE_blendfile_write_partial+0x208) [0x5633276d0d35]
blenderdebug(BKE_copybuffer_save+0x32) [0x5633276cea91]
blenderdebug(+0x4a87825) [0x563327121825]
blenderdebug(+0x41d63c1) [0x5633268703c1]
blenderdebug(+0x41d8307) [0x563326872307]
blenderdebug(+0x41d90bb) [0x5633268730bb]
blenderdebug(+0x41da132) [0x563326874132]
blenderdebug(+0x41da6cf) [0x5633268746cf]
blenderdebug(wm_event_do_handlers+0xb64) [0x563326875db8]
blenderdebug(WM_main+0x30) [0x5633268699d3]
blenderdebug(+0x3d4b227) [0x5633263e5227]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f2704041b97]
blenderdebug(_start+0x2a) [0x5633263e4c8a]
BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/blenkernel/intern/bpath.c:172, BKE_bpath_relative_rebase(), at 'basedir_src[0] != '\0''
**System Information** Operating system: Gentoo Linux Graphics card: AMD 5700xt **Blender Version** Broken: 4102d67d32 (Has to be a debug build to trigger the asserts) **Short description of error** When opening a saved .blend files with bones in it, an assert will fire off when you try to copy a pose bone. **Exact steps for others to reproduce the error** [untitled.blend](https://archive.blender.org/developer/F8425188/untitled.blend) 1. Open attached .blend file 2. Go into pose mode. 3. Copy the only pose bone (ctrl+c) 4. The following assert is triggered: ``` blenderdebug(BLI_system_backtrace+0x35) [0x56332f294818] blenderdebug(BKE_bpath_relative_rebase+0x73) [0x56332679f1ce] blenderdebug(BLO_write_file+0x2cc) [0x563326981aa4] blenderdebug(BKE_blendfile_write_partial+0x208) [0x5633276d0d35] blenderdebug(BKE_copybuffer_save+0x32) [0x5633276cea91] blenderdebug(+0x4a87825) [0x563327121825] blenderdebug(+0x41d63c1) [0x5633268703c1] blenderdebug(+0x41d8307) [0x563326872307] blenderdebug(+0x41d90bb) [0x5633268730bb] blenderdebug(+0x41da132) [0x563326874132] blenderdebug(+0x41da6cf) [0x5633268746cf] blenderdebug(wm_event_do_handlers+0xb64) [0x563326875db8] blenderdebug(WM_main+0x30) [0x5633268699d3] blenderdebug(+0x3d4b227) [0x5633263e5227] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7f2704041b97] blenderdebug(_start+0x2a) [0x5633263e4c8a] BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/blenkernel/intern/bpath.c:172, BKE_bpath_relative_rebase(), at 'basedir_src[0] != '\0'' ```
Author
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2020-03-23 17:50:41 +01:00

This issue was referenced by cd02495479

This issue was referenced by cd0249547926ee975fc3ba7046f59bf9ca004547

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75036
No description provided.