Fix T75036: Assert when copying pose bones